--- a/views/data-collection.ejs
+++ b/views/data-collection.ejs
@@ -4,7 +4,7 @@
 <!-- head為網頁的表頭，通常將CSS、引用bootstrap、jquery等meta data，以及javascript函數放在表頭內 -->
 <!---->
 <head> 
-	<title>遠端監控服務</title> <!-- 網頁標題 -->
+	<title>資料收集服務</title> <!-- 網頁標題 -->
 	<!-- 以下這5行是引用bootstrap及jquery CDN (Content Delivery Network)的標準動作 -->
 	<meta charset="utf-8"> <!-- 指定內文的編碼，若要顯示中文，通常用utf-8這個unicode編碼 -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
