--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,7 +31,7 @@
 	<Center>
 	<h1 class="bg-primary"><b>專案首頁</b></h1>
 	<div> 
-		<button id="btn1" class="btn btn-success btn-lg"><b>資料收集服務(使用mysql)</b></button>
+		<button id="btn1" class="btn btn-success btn-lg"><b>資料收集服務(使用模擬資料+mysql)</b></button>
 	</div>
 	</center>
 	
