--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -57,7 +57,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li><a id="home">首頁</a></li>
-		 <li><a id="data_collection">資料收集服務(使用mysql)</a></li>
+		 <li><a id="data_collection">資料收集服務(使用模擬資料+mysql)</a></li>
       </ul>
     </div>
   </div>
